--- a/index.html
+++ b/index.html
@@ -5,9 +5,30 @@
     <title></title>
   </head>
   <body>
+<h1>Detect Faces:</h1>
+Enter the URL to an image that includes a face or faces, then click
+the <strong>Analyze face</strong> button.<br><br>
 
+Image to analyze: <input type="text" name="inputImage" id="inputImage"
+value="bog.jpg" />
+
+<button onclick="processImage()">Analyze face</button><br><br>
+
+<div id="wrapper" style="width:1020px; display:table;">
+    <div id="jsonOutput" style="width:600px; display:table-cell;">
+        Response:<br><br>
+
+        <textarea id="responseTextArea" class="UIInput"
+                  style="width:580px; height:400px;"></textarea>
+    </div>
+    <div id="imageDiv" style="width:420px; display:table-cell;">
+        Source image:<br><br>
+
+        <img id="sourceImage" width="400" />
+    </div>
+</div>
   </body>
-
+  <script type="text/javascript" src="facedetect.js"></script>
   <script type="text/javascript" src="jquery.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 
