--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link 
+      rel="stylesheet" 
+      type="text/css" 
+      href="style.css">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
+    Hey Whats Up!
+    <a href="skype.html" class="myButton">Update</a>
 
   </body>
 
