Added Skype Call into page

--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
   </head>
   <body>
 
+   <div 
+      class="skype-button rounded" 
+      data-text="Contact an advisor"
+      data-contact-id="tanasie.bogdan21"
+   >
+   </div>
+
+    <div 
+        class="skype-chat" 
+        data-show-header="true"
+        data-theme="dark"
+        data-can-collapse ="true"
+      
+        >
+    </div>
+
+  <script src="https://swc.cdn.skype.com/sdk/v1/sdk.min.js"></script> 
   </body>
-
-  <script type="text/javascript" src="jquery.min.js"></script>
-  <script type="text/javascript" src="script.js"></script>
-
 </html>
+
+ 
