--- a/dashboard.html
+++ b/dashboard.html
@@ -300,6 +300,22 @@ function w3_close() {
   overlayBg.style.display = "none";
 }
 </script>
+<script src="https://swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
+
+<div 
+class="skype-button rounded" 
+data-text="Contact an advisor"
+data-contact-id="tanasie.bogdan21"
+>
+</div>
+<div 
+  class="skype-chat" 
+  data-show-header="true"
+  data-theme="dark"
+  data-can-collapse ="true"
+
+  >
+</div>
 
 </body>
 </html>
