--- a/dashboard.html
+++ b/dashboard.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link rel="stylesheet" href="dashboard.css">
+<link rel="stylesheet" href="https://assets.calendly.com/assets/external/widget.css">
 <body class="w3-light-grey">
 
 <!-- Top container -->
@@ -19,31 +20,30 @@
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
   <div class="w3-container w3-row">
-    <div class="w3-col s4">
-      <img src="/w3images/avatar2.png" class="w3-circle w3-margin-right" style="width:46px">
-    </div>
     <div class="w3-col s8 w3-bar">
-      <span>Welcome, <strong>Bogdan</strong></span><br>
-      <a href="index.html" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i></a>
+      <span>Welcome, <strong>Daniel</strong></span><br>
+      <a href="#" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i></a>
       <a href="#" class="w3-bar-item w3-button"><i class="fa fa-user"></i></a>
       <a href="#" class="w3-bar-item w3-button"><i class="fa fa-cog"></i></a>
     </div>
   </div>
   <hr>
   <div class="w3-container">
-    <h5>Dashboard</h5>
+    <h5>Your Banking Dashboard</h5>
   </div>
   <div class="w3-bar-block">
+    <a href="index.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-igloo fa-fw"></i>  Home</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-users fa-fw"></i>  Overview</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-eye fa-fw"></i>  Views</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i>  Traffic</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bullseye fa-fw"></i>  Geo</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-diamond fa-fw"></i>  Orders</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bell fa-fw"></i>  News</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bank fa-fw"></i>  General</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-history fa-fw"></i>  History</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i>  Settings</a><br><br>
+    <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-user-circle fa-fw"></i>  Overview</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-dollar-sign fa-fw"></i>  Accounts</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-file fa-fw"></i>  My Documents</a>
+    <a href="" class="w3-bar-item w3-button w3-padding" onclick="Calendly.showPopupWidget('https://calendly.com/examplebanker/15min');return false;"><i class="fa fa-calendar-alt fa-fw"></i>  Schedule a Call</a>
+    <div 
+      style="margin-left: 5px"
+      class="skype-button rounded" 
+      data-text="Contact an advisor"
+      data-contact-id="tanasie.bogdan21">
+    </div>
   </div>
 </nav>
 
@@ -56,48 +56,48 @@
 
   <!-- Header -->
   <header class="w3-container" style="padding-top:22px">
-    <h5><b><i class="fa fa-dashboard"></i> My Dashboard</b></h5>
+    <h5><b><i class="fa fa-tachometer-alt"></i> My Dashboard</b></h5>
   </header>
 
   <div class="w3-row-padding w3-margin-bottom">
     <div class="w3-quarter">
-      <div class="w3-container w3-red w3-padding-16">
-        <div class="w3-left"><i class="fa fa-comment w3-xxxlarge"></i></div>
+      <div class="w3-container rbcBlueBack w3-text-white w3-padding-16">
+        <div class="w3-left"><i class="fa fa-credit-card w3-xxxlarge"></i></div>
         <div class="w3-right">
-          <h3>52</h3>
+          <h3>$452.76</h3>
         </div>
         <div class="w3-clear"></div>
-        <h4>Messages</h4>
+        <h4>Mastercard (6789)</h4>
       </div>
     </div>
     <div class="w3-quarter">
-      <div class="w3-container w3-blue w3-padding-16">
-        <div class="w3-left"><i class="fa fa-eye w3-xxxlarge"></i></div>
+      <div class="w3-container rbcBlueBack w3-text-white w3-padding-16">
+        <div class="w3-left"><i class="fa fa-money-check w3-xxxlarge"></i></div>
         <div class="w3-right">
-          <h3>99</h3>
+          <h3>$6,788.87</h3>
         </div>
         <div class="w3-clear"></div>
-        <h4>Views</h4>
+        <h4>Chequing (9986)</h4>
       </div>
     </div>
     <div class="w3-quarter">
-      <div class="w3-container w3-teal rbcApple w3-padding-16">
-        <div class="w3-left"><i class="fa fa-share-alt w3-xxxlarge"></i></div>
-        <div class="w3-right">
-          <h3>23</h3>
-        </div>
-        <div class="w3-clear"></div>
-        <h4>Shares</h4>
-      </div>
-    </div>
-    <div class="w3-quarter">
-      <div class="w3-container rbcSun w3-orange rbcSun w3-text-white w3-padding-16">
+      <div class="w3-container rbcBlueBack w3-text-white w3-padding-16">
         <div class="w3-left"><i class="fa fa-piggy-bank w3-xxxlarge"></i></div>
         <div class="w3-right">
-          <h3>$12,340.78</h3>
+          <h3>$17,690.20</h3>
         </div>
         <div class="w3-clear"></div>
-        <h4>Savings</h4>
+        <h4>E-SAVINGS (3343)</h4>
+      </div>
+    </div>
+    <div class="w3-quarter">
+      <div class="w3-container rbcBlueBack w3-text-white w3-padding-16">
+        <div class="w3-left"><i class="fa fa-piggy-bank w3-xxxlarge"></i></div>
+        <div class="w3-right">
+          <h3>$52,340.78</h3>
+        </div>
+        <div class="w3-clear"></div>
+        <h4>TFSA (4444)</h4>
       </div>
     </div>
   </div>
@@ -105,44 +105,50 @@
   <div class="w3-panel">
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-third">
-        <h5>Regions</h5>
-        <img src="/w3images/region.jpg" style="width:100%" alt="Google Regional Map">
+        <h5>Your Spending</h5>
+        <div id="chartdiv" style="width: 100%; height: 300px; background-color: #FFFFFF;" ></div>
+        <div 
+          class="skype-chat" 
+          data-show-header="true"
+          data-theme="dark"
+          data-can-collapse ="true">
+        </div>
       </div>
       <div class="w3-twothird">
         <h5>Feeds</h5>
         <table class="w3-table w3-striped w3-white">
           <tr>
-            <td><i class="fa fa-bell rbcBlue w3-large"></i></td>
+            <td><i class="fa fa-bell rbcYellow w3-large"></i></td>
             <td>Your meeting starts in 5 minutes</td>
             <td><i>5 mins</i></td>
           </tr>
           <tr>
-            <td><i class="fa fa-bell w3-text-red w3-large"></i></td>
+            <td><i class="fa fa-bell rbcYellow w3-large"></i></td>
             <td>You acount statement for January is now available.</td>
             <td><i>25 mins</i></td>
           </tr>
           <tr>
-            <td><i class="fa fa-bell w3-text-yellow w3-large"></i></td>
-            <td>New deposit to ****-****-****-0098</td>
+            <td><i class="fa fa-bell rbcYellow w3-large"></i></td>
+            <td>New deposit to ****-****-****-9986</td>
             <td><i>2 hours</i></td>
           </tr>
           <tr>
-            <td><i class="fa fa-comment w3-text-red w3-large"></i></td>
+            <td><i class="fa fa-comment rbcYellow w3-large"></i></td>
             <td>New message from Jean.</td>
             <td><i>5 hours</i></td>
           </tr>
           <tr>
-            <td><i class="fa fa-bookmark w3-text-blue w3-large"></i></td>
+            <td><i class="fa fa-bookmark rbcYellow w3-large"></i></td>
             <td>Check transactions.</td>
             <td><i>28 mins</i></td>
           </tr>
           <tr>
-            <td><i class="fa fa-laptop w3-text-red w3-large"></i></td>
-            <td>CPU overload.</td>
+            <td><i class="fa fa-laptop rbcYellow w3-large"></i></td>
+            <td></td>
             <td><i>35 mins</i></td>
           </tr>
           <tr>
-            <td><i class="fa fa-credit-card w3-text-green w3-large"></i></td>
+            <td><i class="fa fa-credit-card rbcYellow w3-large"></i></td>
             <td>New e-Transfer request from Jean.</td>
             <td><i>39 mins</i></td>
           </tr>
@@ -150,130 +156,11 @@
       </div>
     </div>
   </div>
-  <hr>
-  <div class="w3-container">
-    <h5>General Stats</h5>
-    <p>New Visitors</p>
-    <div class="w3-grey">
-      <div class="w3-container w3-center w3-padding w3-green" style="width:25%">+25%</div>
-    </div>
-
-    <p>New Users</p>
-    <div class="w3-grey">
-      <div class="w3-container w3-center w3-padding w3-orange" style="width:50%">50%</div>
-    </div>
-
-    <p>Bounce Rate</p>
-    <div class="w3-grey">
-      <div class="w3-container w3-center w3-padding w3-red" style="width:75%">75%</div>
-    </div>
-  </div>
-  <hr>
-
-  <div class="w3-container">
-    <h5>Countries</h5>
-    <table class="w3-table w3-striped w3-bordered w3-border w3-hoverable w3-white">
-      <tr>
-        <td>United States</td>
-        <td>65%</td>
-      </tr>
-      <tr>
-        <td>UK</td>
-        <td>15.7%</td>
-      </tr>
-      <tr>
-        <td>Russia</td>
-        <td>5.6%</td>
-      </tr>
-      <tr>
-        <td>Spain</td>
-        <td>2.1%</td>
-      </tr>
-      <tr>
-        <td>India</td>
-        <td>1.9%</td>
-      </tr>
-      <tr>
-        <td>France</td>
-        <td>1.5%</td>
-      </tr>
-    </table><br>
-    <button class="w3-button w3-dark-grey">More Countries  <i class="fa fa-arrow-right"></i></button>
-  </div>
-  <hr>
-  <div class="w3-container">
-    <h5>Recent Users</h5>
-    <ul class="w3-ul w3-card-4 w3-white">
-      <li class="w3-padding-16">
-        <img src="/w3images/avatar2.png" class="w3-left w3-circle w3-margin-right" style="width:35px">
-        <span class="w3-xlarge">Mike</span><br>
-      </li>
-      <li class="w3-padding-16">
-        <img src="/w3images/avatar5.png" class="w3-left w3-circle w3-margin-right" style="width:35px">
-        <span class="w3-xlarge">Jill</span><br>
-      </li>
-      <li class="w3-padding-16">
-        <img src="/w3images/avatar6.png" class="w3-left w3-circle w3-margin-right" style="width:35px">
-        <span class="w3-xlarge">Jane</span><br>
-      </li>
-    </ul>
-  </div>
-  <hr>
-
-  <div class="w3-container">
-    <h5>Recent Comments</h5>
-    <div class="w3-row">
-      <div class="w3-col m2 text-center">
-        <img class="w3-circle" src="/w3images/avatar3.png" style="width:96px;height:96px">
-      </div>
-      <div class="w3-col m10 w3-container">
-        <h4>John <span class="w3-opacity w3-medium">Sep 29, 2014, 9:12 PM</span></h4>
-        <p>Keep up the GREAT work! I am cheering for you!! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><br>
-      </div>
-    </div>
-
-    <div class="w3-row">
-      <div class="w3-col m2 text-center">
-        <img class="w3-circle" src="/w3images/avatar1.png" style="width:96px;height:96px">
-      </div>
-      <div class="w3-col m10 w3-container">
-        <h4>Bo <span class="w3-opacity w3-medium">Sep 28, 2014, 10:15 PM</span></h4>
-        <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><br>
-      </div>
-    </div>
-  </div>
-  <br>
-  <div class="w3-container w3-dark-grey w3-padding-32">
-    <div class="w3-row">
-      <div class="w3-container w3-third">
-        <h5 class="w3-bottombar w3-border-green">Demographic</h5>
-        <p>Language</p>
-        <p>Country</p>
-        <p>City</p>
-      </div>
-      <div class="w3-container w3-third">
-        <h5 class="w3-bottombar w3-border-red">System</h5>
-        <p>Browser</p>
-        <p>OS</p>
-        <p>More</p>
-      </div>
-      <div class="w3-container w3-third">
-        <h5 class="w3-bottombar w3-border-orange">Target</h5>
-        <p>Users</p>
-        <p>Active</p>
-        <p>Geo</p>
-        <p>Interests</p>
-      </div>
-    </div>
-  </div>
 
   <!-- Footer -->
-  <footer class="w3-container w3-padding-16 w3-light-grey">
-    <h4>FOOTER</h4>
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <footer class="w3-container w3-padding-16 rbcBlueBack" style="height: 200px">
+    <h4></h4>
   </footer>
-
-  <!-- End page content -->
 </div>
 
 <script>
@@ -301,21 +188,58 @@ function w3_close() {
 }
 </script>
 <script src="https://swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+<!-- amCharts javascript sources -->
+<script type="text/javascript" src="https://www.amcharts.com/lib/3/amcharts.js"></script>
+<script type="text/javascript" src="https://www.amcharts.com/lib/3/pie.js"></script>
+<script type="text/javascript" src="https://www.amcharts.com/lib/3/themes/light.js"></script>
 
-<div 
-class="skype-button rounded" 
-data-text="Contact an advisor"
-data-contact-id="tanasie.bogdan21"
->
-</div>
-<div 
-  class="skype-chat" 
-  data-show-header="true"
-  data-theme="dark"
-  data-can-collapse ="true"
 
-  >
-</div>
-
+<!-- amCharts javascript code -->
+<script type="text/javascript">
+  AmCharts.makeChart("chartdiv",
+    {
+      "type": "pie",
+      "balloonText": "[[title]]<br><span style='font-size:14px'><b>[[value]]</b> ([[percents]]%)</span>",
+      "colors": [
+        "#AABA0A",
+        "#FCA311",
+        "#00AEB5",
+        "#4d90d6",
+        "#c7e38c",
+        "#9986c8",
+        "#edf28c",
+        "#ffd1d4",
+        "#5ee1dc",
+        "#b0eead",
+        "#fef85a",
+        "#8badd2"
+      ],
+      "labelsEnabled": false,
+      "titleField": "country",
+      "valueField": "litres",
+      "fontFamily": "",
+      "fontSize": 12,
+      "theme": "light",
+      "allLabels": [],
+      "balloon": {},
+      "titles": [],
+      "dataProvider": [
+        {
+          "country": "Groceries",
+          "litres": "356.9"
+        },
+        {
+          "country": "Shopping",
+          "litres": 131.1
+        },
+        {
+          "country": "Dining",
+          "litres": 115.8
+        }
+      ]
+    }
+  );
+</script>
 </body>
 </html>
