Changes to index.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -129,28 +129,28 @@
           </tr>
           <tr>
             <td><i class="fa fa-bell rbcYellow w3-large"></i></td>
-            <td>New deposit to ****-****-****-9986</td>
+            <td>New deposit to ****-****-****-3343.</td>
             <td><i>2 hours</i></td>
           </tr>
           <tr>
             <td><i class="fa fa-comment rbcYellow w3-large"></i></td>
-            <td>New message from Jean.</td>
+            <td>New message from your advisor.</td>
             <td><i>5 hours</i></td>
           </tr>
           <tr>
-            <td><i class="fa fa-bookmark rbcYellow w3-large"></i></td>
-            <td>Check transactions.</td>
-            <td><i>28 mins</i></td>
+            <td><i class="fa fa-chart-pie rbcYellow w3-large"></i></td>
+            <td>Your spending report for the week is now available.</td>
+            <td><i>18 hours</i></td>
           </tr>
           <tr>
-            <td><i class="fa fa-laptop rbcYellow w3-large"></i></td>
-            <td></td>
-            <td><i>35 mins</i></td>
+            <td><i class="fa fa-sign-out-alt rbcYellow w3-large"></i></td>
+            <td>Automatic withdrawl from ****-****-****-9986.</td>
+            <td><i>1 day</i></td>
           </tr>
           <tr>
             <td><i class="fa fa-credit-card rbcYellow w3-large"></i></td>
             <td>New e-Transfer request from Jean.</td>
-            <td><i>39 mins</i></td>
+            <td><i>3 days</i></td>
           </tr>
         </table>
       </div>
